--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 .App {
   text-align: center;
+  margin-top: 100px;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.window{
+  font-size: large;
+  font-weight: 500;
 }
 
 @media (prefers-reduced-motion: no-preference) {
